test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_parse/bad_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  void
  *
  identifier(v)
  ;
  return
  const int(0)
  ;
  }
